[package]
name = "rustian-roulette"
version = "0.1.2"
authors = ["Jacky Zhen <jacky.s.zhen@gmail.com>"]
description = "Play deadly roulette with your file system. Not meant for serious consumption."
license = "MIT"
homepage = "https://github.com/jackyzhen/rustian-roulette"
repository = "https://github.com/jackyzhen/rustian-roulette"
readme = "README.md"

[[bin]]
bench = false
path = "src/main.rs"
name = "rr"

[dependencies]
rand = "0.5.3"
